# warp

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: my_warp_release.yml
app/: Cargo.toml
app/src/: app_menus.rs  changelog_model.rs  lib.rs  oss_stable_import.rs
app/src/ai/: agent_tips.rs
app/src/auth/: auth_override_warning_body.rs  auth_view_body.rs  auth_view_modal.rs  auth_view_shared_helpers.rs  login_failure_notification.rs  login_slide.rs  mod.rs  needs_sso_link_view.rs  paste_auth_token_modal.rs  web_handoff.rs
app/src/autoupdate/: linux.rs  mod.rs
app/src/code_review/: code_review_view.rs  comment_list_view.rs  comment_rendering.rs  diff_menu.rs  diff_selector.rs  diff_state.rs
app/src/context_chips/: display_chip.rs
app/src/resource_center/: keybindings_page.rs
app/src/settings/: init.rs  language.rs
app/src/settings_view/: about_page.rs  agent_assisted_environment_modal.rs  ai_page.rs  appearance_page.rs  delete_environment_confirmation_dialog.rs  directory_color_add_picker.rs  environments_page.rs  execution_profile_view.rs  features_page.rs  keybindings.rs  main_page.rs  mod.rs  mod_test.rs  nav.rs  platform_page.rs  privacy_page.rs  referrals_page.rs  settings_file_footer.rs  settings_page.rs  show_blocks_view.rs  transfer_ownership_confirmation_modal.rs  warpify_page.rs  (+2 more)
crates/warp_i18n/: Cargo.toml
crates/warp_i18n/bundles/en/: app.ftl  common.ftl  settings.ftl
crates/warp_i18n/bundles/zh-CN/: app.ftl  common.ftl  settings.ftl
crates/warp_i18n/src/: lib.rs  lib_tests.rs
crates/xtask/: Cargo.toml
docs/: my-warp-i18n.md
(+23 files in other folders)
